--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,10 @@
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
-			<main class="page">
+			<main class="page ">
+				<div class="page__container">
+					
+				</div>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
